@@ -42,4 +42,11 @@ Author
 ------
 Evan Martin - martine@cs.washington.edu - http://neugierig.org
 
+
+Thanks
+------
+Ari Pollak <ari@debian.org> - Debian packages.
+Alex <hansolo@rochester.rr.com> - Redhat packages.
+
+
 vim: tw=72
